--- a/manifests/mongo-service.yaml
+++ b/manifests/mongo-service.yaml
@@ -2,7 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
+  namespace: guestbook
   labels:
+    owner: Rodel_Agbing
+    desc: clo835-assignment3
     app.kubernetes.io/name: mongo
     app.kubernetes.io/component: backend
 spec:
