--- a/manifests/mongo-deployment.yaml
+++ b/manifests/mongo-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo
-  namespace: guestbook
+  namespace: lab3
   labels:
     owner: Rodel_Agbing
     desc: clo835-assignment3
