--- a/manifests/mongo-service.yaml
+++ b/manifests/mongo-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
-  namespace: guestbook
+  namespace: lab3
   labels:
     owner: Rodel_Agbing
     desc: clo835-assignment3
