Attaching the volume using PVC to the Mongodb

--- a/manifests/mongo-deployment.yaml
+++ b/manifests/mongo-deployment.yaml
@@ -32,3 +32,10 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 27017
+        volumeMounts:
+        - name: mongodb-datastore
+          mountPath: /data/db
+      volumes:
+      - name: mongodb-datastore
+        persistentVolumeClaim:
+            claimName: mongo-pvc
