creation of hostPath volume type and mongo deployment manifest update
mongo-deployment manifest update for hostPath volume assigment.

--- a/manifests/mongo-deployment.yaml
+++ b/manifests/mongo-deployment.yaml
@@ -38,4 +38,5 @@ spec:
       volumes:
       - name: mongodb-datastore
         persistentVolumeClaim:
-            claimName: mongo-pvc
+            #claimName: mongo-pvc
+            claimName: mongodb-pvc-hp
