--- a/manifests/mongo-sc_pvc.yaml
+++ b/manifests/mongo-sc_pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp2
-reclaimPolicy: Delete
+reclaimPolicy: Retain
 # Uncomment the following line if you need to bind the volume Immediately 
 # volumeBindingMode: Immediate
 volumeBindingMode: WaitForFirstConsumer
