--- a/webapp/webapp-namespace-infra.yaml
+++ b/webapp/webapp-namespace-infra.yaml
@@ -12,17 +12,17 @@ metadata:
   name: webapp-configmap
   namespace: lab3-bonus
 data:
-  APP_COLOR_ENV: "yellow" 
+  APP_COLOR: "red"
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: webapp-secret
   namespace: lab3-bonus
-#type: Opaque
+type: Opaque
 data:
-  APP_COLOR_ENV: "gReen+==" 
-
+  # APP_COLOR = green / Base64 (https://www.base64encode.org/)
+  APP_COLOR: "Ymx1ZQ=="
 ---
 apiVersion: v1
 kind: Pod
@@ -30,7 +30,9 @@ metadata:
   name: webapp-env-from-configmap
   namespace: lab3-bonus
   labels: 
-    app: webapp_configmap
+    owner: Rodel_Agbing
+    desc: clo835-assignment3
+    app: webapp
 spec:
   containers:
   - image: mmumshad/simple-webapp-color
@@ -39,8 +41,8 @@ spec:
       valueFrom: 
         configMapKeyRef:
           name: webapp-configmap
-          key: APP_COLOR_ENV
-    name: webapp-cont-configmap
+          key: APP_COLOR
+    name: webapp-configmap-netw
     ports:
     - containerPort: 8080
       protocol: TCP
@@ -51,17 +53,39 @@ metadata:
   name: webapp-env-from-secret
   namespace: lab3-bonus
   labels: 
-    app: webapp-secret
+    owner: Rodel_Agbing
+    desc: clo835-assignment3
+    app: webapp
 spec:
   containers:
   - image: mmumshad/simple-webapp-color
     env:
     - name: APP_COLOR
       valueFrom: 
-        configMapKeyRef:
+        secretKeyRef:
           name: webapp-secret
-          key: APP_COLOR_ENV
-    name: webapp-cont-secret
+          key: APP_COLOR
+    name: webapp-secret-netw
+    ports:
+    - containerPort: 8080
+      protocol: TCP
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: webapp-color-plaintext
+  namespace: lab3-bonus
+  labels: 
+    owner: Rodel_Agbing
+    desc: clo835-assignment3
+    app: webapp
+spec:
+  containers:
+  - image: mmumshad/simple-webapp-color
+    env:
+    - name: APP_COLOR
+      value: "pink"
+    name: webapp-plaintext-netw
     ports:
     - containerPort: 8080
       protocol: TCP
@@ -69,29 +93,35 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: webapp-cm-svc
+  name: webapp-svc-configmap
   namespace: lab3-bonus
   labels:
-    app: webapp-configmap
+    owner: Rodel_Agbing
+    desc: clo835-assignment3
+    app: webapp-svc
 spec:
+  # No define NodePort to avoid future port conflict  
   type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
   selector:
-    app: webapp-configmap
+    app: webapp
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: webapp-secret-svc
+  name: webapp-svc-secret
   namespace: lab3-bonus
   labels:
-    app: webapp-secret
+    owner: Rodel_Agbing
+    desc: clo835-assignment3
+    app: webapp-svc
 spec:
+  # No define NodePort to avoid future port conflict  
   type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
   selector:
-    app: webapp-secret
+    app: webapp
